--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "clinet-start": "npm install --prefix client",
     "start": "node src/server.js",
-    "server": "nodemon src/server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "nodemon src/server.js",
+    "server": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
